{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 49,
  "lineage": "4c2104b3-8922-dc78-3996-313acd40e3e0",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:loadbalancer/app/graylog-load-balancer/b7e6585a263e6d3f",
            "arn_suffix": "app/graylog-load-balancer/b7e6585a263e6d3f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "graylog-load-balancer-697656820.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:loadbalancer/app/graylog-load-balancer/b7e6585a263e6d3f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "graylog-load-balancer",
            "security_groups": [
              "sg-0856af5ad6c04b498"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001214a20b1bb5aed"
              },
              {
                "subnet_id": "subnet-076d4f1f20e2f32dd"
              }
            ],
            "subnets": [
              "subnet-001214a20b1bb5aed",
              "subnet-076d4f1f20e2f32dd"
            ],
            "vpc_id": "vpc-098ad6c74a38eac54",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.compute.data.aws_subnet_ids.this",
            "module.security.aws_iam_instance_profile.dev-resources-iam-profile",
            "module.security.aws_iam_role.ssm-role",
            "module.security.aws_iam_role_policy_attachment.ssm-policy",
            "module.security.aws_key_pair.terraform-demo",
            "module.vpc_subnet.aws_default_route_table.this",
            "module.vpc_subnet.aws_internet_gateway.IGW_Gateway",
            "module.vpc_subnet.aws_route_table_association.a",
            "module.vpc_subnet.aws_route_table_association.b",
            "module.vpc_subnet.aws_security_group.inbound_ssh_and_http",
            "module.vpc_subnet.aws_subnet.subnet1",
            "module.vpc_subnet.aws_subnet.subnet2",
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available",
            "module.vpc_subnet.data.aws_caller_identity.current",
            "module.vpc_subnet.data.aws_canonical_user_id.current"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:listener/app/graylog-load-balancer/b7e6585a263e6d3f/9765047ae1d0d679",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:targetgroup/tf-20220929114441168700000002/1549b43377cb3260",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:listener/app/graylog-load-balancer/b7e6585a263e6d3f/9765047ae1d0d679",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:loadbalancer/app/graylog-load-balancer/b7e6585a263e6d3f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.this",
            "module.compute.aws_lb_target_group.this",
            "module.compute.data.aws_subnet_ids.this",
            "module.security.aws_iam_instance_profile.dev-resources-iam-profile",
            "module.security.aws_iam_role.ssm-role",
            "module.security.aws_iam_role_policy_attachment.ssm-policy",
            "module.security.aws_key_pair.terraform-demo",
            "module.vpc_subnet.aws_default_route_table.this",
            "module.vpc_subnet.aws_internet_gateway.IGW_Gateway",
            "module.vpc_subnet.aws_route_table_association.a",
            "module.vpc_subnet.aws_route_table_association.b",
            "module.vpc_subnet.aws_security_group.inbound_ssh_and_http",
            "module.vpc_subnet.aws_subnet.subnet1",
            "module.vpc_subnet.aws_subnet.subnet2",
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available",
            "module.vpc_subnet.data.aws_caller_identity.current",
            "module.vpc_subnet.data.aws_canonical_user_id.current"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:targetgroup/tf-20220929114441168700000002/1549b43377cb3260",
            "arn_suffix": "targetgroup/tf-20220929114441168700000002/1549b43377cb3260",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:006238553855:targetgroup/tf-20220929114441168700000002/1549b43377cb3260",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220929114441168700000002",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-098ad6c74a38eac54"
          },
          "dependencies": [
            "module.security.aws_iam_instance_profile.dev-resources-iam-profile",
            "module.security.aws_iam_role.ssm-role",
            "module.security.aws_iam_role_policy_attachment.ssm-policy",
            "module.security.aws_key_pair.terraform-demo",
            "module.vpc_subnet.aws_default_route_table.this",
            "module.vpc_subnet.aws_internet_gateway.IGW_Gateway",
            "module.vpc_subnet.aws_route_table_association.a",
            "module.vpc_subnet.aws_route_table_association.b",
            "module.vpc_subnet.aws_security_group.inbound_ssh_and_http",
            "module.vpc_subnet.aws_subnet.subnet1",
            "module.vpc_subnet.aws_subnet.subnet2",
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available",
            "module.vpc_subnet.data.aws_caller_identity.current",
            "module.vpc_subnet.data.aws_canonical_user_id.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:006238553855:route-table/rtb-09e28172eee32b760",
            "default_route_table_id": "rtb-09e28172eee32b760",
            "id": "rtb-09e28172eee32b760",
            "owner_id": "006238553855",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4171a20bbb669a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table"
            },
            "tags_all": {
              "Name": "default route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-098ad6c74a38eac54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnet.aws_internet_gateway.IGW_Gateway",
            "module.vpc_subnet.aws_vpc.Website_Default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:006238553855:internet-gateway/igw-0a4171a20bbb669a5",
            "id": "igw-0a4171a20bbb669a5",
            "owner_id": "006238553855",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-098ad6c74a38eac54"
          },
          "dependencies": [
            "module.vpc_subnet.aws_vpc.Website_Default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0095d6a3894a48bbf",
            "route_table_id": "rtb-09e28172eee32b760",
            "subnet_id": "subnet-001214a20b1bb5aed"
          },
          "dependencies": [
            "module.vpc_subnet.aws_default_route_table.this",
            "module.vpc_subnet.aws_internet_gateway.IGW_Gateway",
            "module.vpc_subnet.aws_subnet.subnet1",
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0d05ec6e4f138dd",
            "route_table_id": "rtb-09e28172eee32b760",
            "subnet_id": "subnet-076d4f1f20e2f32dd"
          },
          "dependencies": [
            "module.vpc_subnet.aws_default_route_table.this",
            "module.vpc_subnet.aws_internet_gateway.IGW_Gateway",
            "module.vpc_subnet.aws_subnet.subnet1",
            "module.vpc_subnet.aws_subnet.subnet2",
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inbound_ssh_and_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:006238553855:security-group/sg-0da744d2ac4725120",
            "description": "Allows inbound http connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da744d2ac4725120",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow SSH and HTTP",
            "name_prefix": "",
            "owner_id": "006238553855",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-098ad6c74a38eac54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnet.aws_vpc.Website_Default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:006238553855:subnet/subnet-001214a20b1bb5aed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001214a20b1bb5aed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006238553855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main Subnet",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Main Subnet",
              "Tier": "Public"
            },
            "vpc_id": "vpc-098ad6c74a38eac54"
          },
          "dependencies": [
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:006238553855:subnet/subnet-076d4f1f20e2f32dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076d4f1f20e2f32dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006238553855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Additional Subnet",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Additional Subnet",
              "Tier": "Public"
            },
            "vpc_id": "vpc-098ad6c74a38eac54"
          },
          "dependencies": [
            "module.vpc_subnet.aws_vpc.Website_Default",
            "module.vpc_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Website_Default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:006238553855:vpc/vpc-098ad6c74a38eac54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c508362fd6af5d3",
            "default_route_table_id": "rtb-09e28172eee32b760",
            "default_security_group_id": "sg-0856af5ad6c04b498",
            "dhcp_options_id": "dopt-07696bf7a02c95ad5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-098ad6c74a38eac54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e28172eee32b760",
            "owner_id": "006238553855",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}